--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
 
     <!-- Document Title -->
-    <title>Disconnect3301 Profile</title>
-
+    <title>Disconnect3301 Profile</title> 
+<!-- testing stuff -->
     <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, shrink-to-fit=no">
     <meta name="description" content="Disconnect profile card and information of their creations.">
