changes whole code

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
 
     <!-- Document Title -->
-    <title>Disconnect3301 Profile</title> 
-<!-- testing stuff -->
+    <title>Disconnect3301 - Profile</title> 
+
     <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, shrink-to-fit=no">
     <meta name="description" content="Disconnect profile card and information of their creations.">
@@ -16,7 +16,10 @@
     <meta name="author" content="Disconnect3301">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
@@ -42,22 +45,40 @@
 </head>
 
 <body>
-    <div class="profile-card">
-        <img class="avatar" src="/images/avatar.png" alt="" width="256" height="256">
-        <h1><a href="https://discordapp.com/users/411943262660591617/">Disconnect3301</a></h1>
-        <div class="about-me">
-            <h2>About Me</h2>
-            <p>Disconnect description.</p>
-            <p>Disconnect description.</p>
-        </div>
+    <main class="main-container">
+        <div class="profile-card">
+            <img class="avatar" src="/images/avatar.png" alt="" width="256" height="256">
+            <h1><a href="https://discordapp.com/users/411943262660591617/">Disconnect3301</a></h1>
+            <div class="about-me">
+                <h2>About Me</h2>
+                <p>Disconnect description.</p>
+                <p>Disconnect description.</p>
+            </div>
         
-        <h2>Contact Me</h2>
+            <h2>Contact Me</h2>
             <ul>
-                <a href="https://discord.gg/7bWuZ8U">Discord Server</a>
-                <a href="mailto:disconnect3301@gmail.com">Email</a>
-                <a href="https://github.com/Disconnect3301">GitHub</a>
+                <a href="https://discordapp.com/users/411943262660591617/">
+                    <img src="/images/discord.png" alt="" width="48" height="48">
+                </a>
+                <a href="https://github.com/Disconnect3301">
+                    <img src="/images/github.png" alt="" width="48" height="48">
+                </a>
+                <a href="https://vrchat.com/home/user/usr_2926090c-0443-450b-92f4-61471b5e0695">
+                    <img src="/images/vr.png" alt="" width="48" height="48">
+                </a>
             </ul>
-    </div>
+        </div>
+        <div class="projects-container">
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+            <div class="test"></div>
+        </div>
+    </main>
+
+    <section class="background"></section>
 </body>
 
 </html>
