fixed for mobile only

--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
 <body>
     <main class="main-container">
         <div class="profile-card">
-            <img class="avatar" src="/images/avatar.png" alt="" width="256" height="256">
-            <h1 style="padding: 5% 0 0 0;"><a href="https://discordapp.com/users/411943262660591617/">Disconnect3301</a></h1>
+            <div class="start-section">
+                <img class="avatar" src="/images/avatar.png" alt="">
+                <h1 class="username">
+                    <a href="https://discordapp.com/users/411943262660591617/">Disconnect3301</a>
+                </h1>
+            </div>
 
             <div class="boxes">
                 <h2>About Me</h2>
-                <p>Disconnect - just guy who playing in VRChat everyday.</p>
+                <p>Just a guy who playing in VRChat everyday.</p>
                 <p>Avatar Maker | Particles Lover | Fennec Fox Fan</p>
                 <p>Cute Ooka Miko inside :3</p>
             </div>
@@ -61,21 +65,21 @@
                 <h2>Contact Me</h2>
                 <ul>
                     <a href="https://discordapp.com/users/411943262660591617/">
-                        <img src="/images/discord.png" alt="" width="48" height="48">
+                        <img class="contacts-size" src="/images/discord.png" alt="">
                     </a>
                     <a href="https://github.com/Disconnect3301">
-                        <img src="/images/github.png" alt="" width="48" height="48">
+                        <img class="contacts-size" src="/images/github.png" alt="">
                     </a>
                     <a href="https://vrchat.com/home/user/usr_2926090c-0443-450b-92f4-61471b5e0695">
-                        <img src="/images/vr.png" alt="" width="48" height="48">
+                        <img class="contacts-size" src="/images/vr.png" alt="">
                     </a>
                 </ul>
             </div>
         </div>
-        
+
         <div class="projects-card">
-            <h2>My Projects</h2>
-            
+            <h2 style="text-decoration: underline rgba(111, 0, 255, 0.85) 2px;
+    text-underline-offset: 5px;">My Projects</h2>
             <div class="projects-container">
                 <div class="boxes2">
                     <p>super baka test</p>
@@ -94,18 +98,9 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="projects-container">
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-            <div class="test"></div>
-        </div> -->
     </main>
 
-    <section class="background"></section>
+    <div class="background">
 </body>
 
 </html>
