--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <!-- Character Encoding -->
@@ -100,7 +100,7 @@
         </div>
     </main>
 
-    <div class="background">
+    <div class="background"></div>
 </body>
 
 </html>
